// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match/Selector-Item.vue Testing snapshots Component mode=bet 1`] = `
<span
  class="d"
  title="Bookmaker 3"
>
  1.30
</span>
`;

exports[`match/Selector-Item.vue Testing snapshots Component mode=info 1`] = `
<span
  class="d"
>
  Bookmaker 3 1.30
  <hr />
  Bookmaker 2 1.20
  <hr />
  Bookmaker 1 1.10
</span>
`;
